--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/fod_deploy_2/favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YOLOv8 Tensorflow.js App</title>
-    <script type="module" crossorigin src="/assets/index.36b2d66d.js"></script>
-    <link rel="stylesheet" href="/assets/index.f4b1e8b3.css">
+    <script type="module" crossorigin src="/fod_deploy_2/assets/index.36b2d66d.js"></script>
+    <link rel="stylesheet" href="/fod_deploy_2/assets/index.f4b1e8b3.css">
   </head>
   <body>
     <div id="root"></div>
